--- a/index.html
+++ b/index.html
@@ -294,8 +294,25 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>Present</p>
-            <div class="h5">Bradhub</div>
+            <p>September 2022 - Present</p>
+            <div class="h5">YS Technologies</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">VOIP Engineer</div>
+            <p>System administration of FreeSWITCH PBX /IVR / Call center servers located globally. Work with team to perform to ensure security of all VoIP devices and servers, service quality, redundancy of voice paths and service optimization. Analysis of all Linux based servers with respect to QoS, scalability, utilization and high availability. Perform continuous research work on latest technologies for improving Telephony infrastructure. Development of different application which will be integrated with telephony system to enhance monitoring and daily tasks. Development of automation scripts in Python, PHP, Perl etc to automate different tasks and activities in the system. Assist team in designing programs and databases.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>August 2020 - July 2022 (2 years)</p>
+            <div class="h5">Bradhub IT Solutions</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
