--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <div class="card-body cc-experience-header">
             <p>August 2020 - July 2022 (2 years)</p>
             <div class="h5">Bradhub IT Solutions</div>
-            <img src="images/Bradhub.png" style="width: 100px; height: 100px; border-radius: 50%;" alt="Image"/>
+            <img src="images/Bradhub.jpg" style="width: 100px; height: 100px; border-radius: 50%;" alt="Image"/>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
