--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/boys.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Adnan Akhtar</div>
-          <p class="category text-white">Linux Admin - Python Developer - Penetration Tester</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/open?id=1oDjFQfB66TAKUTA4IPcylEZNCOPWKi17" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Linux Admin - Web Developer - Penetration Tester</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/open?id=1oDjFQfB66TAKUTA4IPcylEZNCOPWKi17" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -61,8 +61,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p><b>I'm Linux Admin, Python Developer and Penetration Tester.</b><br><br>
-            Around 3 years of total IT experience as a web designer and intermediate experience in Python Django web frame works in implementing MVC architecture.</p>
+            <p><b>I'm Linux Admin, Web Developer and Penetration Tester.</b><br><br>
+            Around 5 years of total IT experience as a web developer and intermediate experience in PHP MySQL web frameworks in implementing MVC architecture.</p>
             <p>Exceptionally analytic individual with basic experience in determining possible network exploits by delving deep into different computer software and systems. Adept at running tests aimed at deciphering system weaknesses and providing suggestions to overcome them.</p>
           </div>
         </div>
@@ -75,13 +75,13 @@
             Involved in requirement gathering, analysis, design, estimation and testing of the assigned tasks.
             </li>
             <li>
-            Experience in reviewing python code for running the troubleshooting test-cases and bug issues.
+            Experience in reviewing PHP code for running the troubleshooting test-cases and bug issues.
             </li>
             <li>
-            Understanding Python files in environment and make necessary changes if needed.
+            Understanding PHP files in environment and make necessary changes if needed.
             </li>
             <li>
-            Good knowledge in developing Web Application using Python Django.
+            Good knowledge in developing Web Application using PHP MySQL.
             </li>
             <li>
             Expert knowledge in working with LAMP, WAMP and XAMPP.
@@ -121,14 +121,14 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Python</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">PHP</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Django</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Web Security</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
